--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,10 @@
 }
 
 body {
-    font-family: 'Caprasimo', cursive;
     font-family: 'Ubuntu', sans-serif;
     margin: 0;
-    /* Certifique-se de remover margens do corpo para ocupar a tela inteira */
     overflow: hidden;
     background-color: #0A192F;
-
 }
 
 .section {
@@ -40,7 +37,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    /* Usando min-height em vez de height */
     width: 100%;
     padding: 40px;
     text-align: center;
@@ -214,52 +210,6 @@ body {
     }
 }
 
-.card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.card {
-    width: 330px;
-    height: 330px;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    margin: 10px;
-    position: relative;
-    overflow: hidden;
-    transition: transform 0.3s ease;
-    border: 1px solid #444;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.card img {
-    max-width: 150%;
-    height: auto;
-    border-radius: 10px 10px 0 0;
-
-}
-
-.card-content {
-    display: none;
-    background-color: #fff;
-}
-
-.card.open {
-    transform: rotateY(180deg);
-}
-
-.card.open .card-content {
-    display: block;
-    max-width: 150%;
-}
-
 .image-container {
     text-align: center;
 }
@@ -368,4 +318,54 @@ body {
     font-size: 1.2rem;
     flex: 0.3;
     text-decoration: none;
+}
+
+.carousel-container {
+    max-width: 100%;
+    overflow: hidden;
+    flex-wrap: nowrap;
+}
+
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    width: 300px;
+    text-align: center;
+    width: calc(50% - 20px);
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    border-radius: 5px;
+
+}
+
+.carousel-container img {
+    max-width: 100%;
+    height: auto;
+
+}
+
+
+.card a {
+    display: inline-block;
+    padding: 10px 10px;
+    text-decoration: none;
+    color: rgb(57, 78, 199);
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+
+.card img {
+    max-width: 100%;
+    border-radius: 10px 10px 0 0;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+
 }
