--- a/css/styles.css
+++ b/css/styles.css
@@ -10,47 +10,61 @@ body {
     font-family: 'Ubuntu', sans-serif;
     overflow: hidden;
     background-color: #0A192F;
+    background-image: url('../imagens/backGround.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+
+.fullscreen-div {
+    width: 100vw;
+    height: 100vh;
+    background-color: gray;
+    opacity: 0.5;
 }
 
 .section {
-    max-width: 1500px;
-    margin: 0 auto;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     scroll-snap-align: start;
     overflow: hidden;
     transform: translateY(20px);
     transition: opacity 0.5s ease, transform 0.5s ease;
-    position: relative;
-
 
 }
+
 
 .content {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    width: 100%;
-    padding: 40px;
     text-align: center;
     scroll-snap-align: start;
     overflow: hidden;
-
-
 }
 
-.content:nth-child(odd) {
-    background-color: #e0e0e0;
-
+.falling-text {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: fallAndHold 1s ease forwards;
+    margin-top: -60px;
 }
 
-.content:nth-child(even) {
-    background-color: #e0e0e0;
+
+@keyframes fallAndHold {
+    0% {
+        top: -100px;
+        opacity: 0;
+    }
+
+
+
+    100% {
+        top: 30%;
+        opacity: 1;
+    }
 }
+
 
 .navbar {
     position: fixed;
@@ -63,6 +77,7 @@ body {
     align-items: center;
     padding: 10px 20px;
     z-index: 1000;
+
 }
 
 .nav-links {
@@ -91,6 +106,8 @@ body {
     align-items: center;
     flex-wrap: wrap;
     padding: 20px 0;
+    max-width: 500px;
+    min-width: 250px;
 }
 
 .skill {
@@ -117,11 +134,11 @@ body {
     box-shadow: 5px 5px 8px black;
     max-width: 100%;
     height: auto;
-    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 #links {
-    margin-top: 7px;
+    margin-top: 10px;
 }
 
 .link {
@@ -141,17 +158,6 @@ body {
 
 }
 
-#divInicio {
-    display: flex;
-    align-items: center;
-    height: 400px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-
-}
-
 
 
 .footer {
@@ -165,35 +171,7 @@ body {
     width: 100%;
 }
 
-.falling-text {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: fallAndHold 1s ease forwards;
-}
 
-.about-text {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    position: relative;
-    margin-bottom: 20px;
-}
-
-@keyframes fallAndHold {
-    0% {
-        top: -100px;
-        opacity: 0;
-    }
-
-
-
-    100% {
-        top: 30%;
-        opacity: 1;
-    }
-}
 
 @keyframes slide-in {
     0% {
@@ -221,8 +199,9 @@ body {
 .about,
 .contact {
     max-width: 800px;
-    margin: 2rem auto;
-    padding: 1rem;
+    min-width: 250px;
+    margin: 1rem auto;
+
 
 }
 
@@ -360,6 +339,8 @@ body {
 
 
 }
+
+/*Conteudo de cada Section*/
 
 .card img {
     max-width: 100%;
