--- a/css/styles.css
+++ b/css/styles.css
@@ -21,14 +21,14 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: gray;
-    opacity: 0.5;
+    opacity: 0.4;
 }
 
 .section {
     scroll-snap-align: start;
     overflow: hidden;
     transform: translateY(20px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
+    transition: opacity 0.5s ease;
 
 }
 
@@ -48,6 +48,7 @@ body {
     transform: translateX(-50%);
     animation: fallAndHold 1s ease forwards;
     margin-top: -60px;
+
 }
 
 
@@ -98,6 +99,7 @@ body {
 
 .nav-links a:hover {
     color: rgb(57, 78, 199);
+    transform: scale(1.1);
 }
 
 .skills {
@@ -136,29 +138,6 @@ body {
     height: auto;
     margin-bottom: 10px;
 }
-
-#links {
-    margin-top: 10px;
-}
-
-.link {
-    display: inline-block;
-    padding: 10px 10px;
-    border: 2px solid rgb(57, 78, 199);
-    text-decoration: none;
-    color: rgb(57, 78, 199);
-    font-weight: bold;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: transform 0.3s;
-}
-
-.link:hover {
-    transform: scale(1.1);
-
-}
-
-
 
 .footer {
     background-color: #000;
@@ -212,6 +191,7 @@ body {
     border-right: .15em solid #333;
     /* Efeito de cursor de digitação */
     animation: typing 4s steps(40, end), blink-caret .75s step-end infinite;
+
 }
 
 /* Animação da digitação */
@@ -281,7 +261,7 @@ body {
 .logo h1 {
     color: white;
     font-size: 1.5rem;
-    margin-bottom: 5px;
+    margin: 10px;
 }
 
 .contact-icons {
@@ -296,11 +276,20 @@ body {
     text-decoration: none;
 }
 
+.navbar i {
+    font-size: 24px;
+    margin: 10px;
+}
+
+.contact-icons :hover {
+    transform: scale(1.1);
+    color: rgb(57, 78, 199);
+}
+
 .carousel-container {
     max-width: 100%;
     padding: 20px;
     overflow: hidden;
-    width: 1000px;
 }
 
 .swiper-slide {
@@ -308,23 +297,12 @@ body {
     justify-content: center;
     align-items: center;
     width: 1000px;
+    min-width: 1000px;
 }
 
 .card {
-    /*
-    max-width: 100%;
-    text-align: center;
-    border: 1px solid #ccc;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-    border-radius: 5px;*/
-    max-width: 100%;
-    border: 1px solid #ccc;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-
-    text-align: center;
-
+    width: 3000px;
+    height: 350px;
 }
 
 .card a {
@@ -335,18 +313,15 @@ body {
     font-weight: bold;
     border-radius: 4px;
     cursor: pointer;
-
-
-
 }
 
 /*Conteudo de cada Section*/
 
 .card img {
-    max-width: 100%;
+
     border-radius: 10px 10px 0 0;
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
 
 }
